# Fire-Count-202-13-2022

./: .gitignore  README.md  data.dvc  dvc.yaml  env.yml  params.yaml  pyproject.toml  requirements.txt  test_data.dvc
notebooks/: BERT_Similar.ipynb  BERT_Similar_v2.ipynb  BERT_Similar_v3.ipynb  COSA_Publications_WebScraping.ipynb  Data_Collection.ipynb  Final_Farida_EasyOCR_Wordcloud .ipynb  FineTune_BERT.ipynb  KeyBert_ESGBert_KPI_Extraction.ipynb  NER_Quantity_Time_Extraction_Using_Spacy.ipynb  OCR_data_preprocessing.ipynb  PDF2Table.ipynb  Publications_WebScraping.ipynb  SpacyNER_for_preprocessed_data.ipynb  SustainLab_DVC_Data_Download.ipynb  SustainLab_DepParsers_KnowledgeGraph_DR.ipynb  image2text_easyOCR.ipynb  layout_parser_dags.ipynb  modeling_esgBert_subTopics.ipynb  pdf2TextParser.ipynb  pdf_to_text.ipynb  pdf_to_text.py  sentence-transformers model all-MiniLM-L6-v2.ipynb  sustainabilityReportDatacollection.ipynb  sustainability_reports_eda.ipynb  text_to_csv.ipynb  text_to_csv.py
src/Task1-Data Collection/: pdf2TextParser.ipynb
src/Task1-Data Collection/Raw Data/: README.md
src/Task2-Data Preprocessing/: Farida_Final_OpenCV_easyOCRV2.ipynb  Fuzzy_name_matching_PDF-sentences-to-KPIs.ipynb  Generic_KPI_Mapping_using_fuzzy_matching.ipynb  Granular_KPI_Mapping_using_fuzzy_matching.ipynb  farida_final_opencv_easyocrv2.py  sustainability_reports_eda.ipynb
src/Task3-Modelling Process/: README.md
src/Task4-Data Visualization/: README.md
src/scripts/: data_collection.py
